--- a/app/selector.html
+++ b/app/selector.html
@@ -37,12 +37,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100px;
-        height: 100px;
+        width: 150px;
+        height: 120px;
         background-color: #232428;
         border-radius: 10px;
         margin: 10px;
-        padding: 10px;
+        padding: 16px;
         box-sizing: border-box;
         text-align: center;
         color: #fff;
@@ -80,8 +80,20 @@
         max-height: 100%;
       }
 
+      .align-middle {
+        vertical-align: middle;
+      }
+
       .img-shadow {
-        filter: drop-shadow(0 0 10px rgba(255, 255, 255));
+        filter: drop-shadow(0 0 2px rgba(255, 255, 255));
+      }
+
+      .img-shadow-nutaku-com {
+        filter: drop-shadow(0 0 5px #31adff);
+      }
+
+      .img-shadow-nutaku-net {
+        filter: drop-shadow(0 0 5px #e53155);
       }
     </style>
     <script>
@@ -149,6 +161,30 @@
         window.location.href = nw.global.entryUrl;
       }
 
+      function dmm() {
+        nw.global.provider = 'Crave Saga (DMM)';
+        nw.global.loginRegex = /service\/login/;
+        nw.global.pageRegex = /play\/cravesaga/;
+        nw.global.wrapperRegex = [/osapi\.dmm\.com/];
+        nw.global.gameRegex = /https:\/\/gg-client-w\.crave-saga\.net/;
+        nw.global.cookieHosts = ['www.dmm.com', 'dmm.com'];
+        nw.global.entryUrl = 'https://pc-play.games.dmm.com/play/cravesaga/';
+        localStorage.setItem('defaultProvider', 'dmm');
+        window.location.href = nw.global.entryUrl;
+      }
+
+      function fanza() {
+        nw.global.provider = 'Crave Saga X (FANZA GAMES)';
+        nw.global.loginRegex = /service\/login/;
+        nw.global.pageRegex = /play\/cravesagax/;
+        nw.global.wrapperRegex = [/osapi\.dmm\.com/];
+        nw.global.gameRegex = /https:\/\/gg-client-r\.crave-saga\.net/;
+        nw.global.cookieHosts = ['www.dmm.co.jp', 'dmm.co.jp'];
+        nw.global.entryUrl = 'https://pc-play.games.dmm.co.jp/play/cravesagax/';
+        localStorage.setItem('defaultProvider', 'fanza');
+        window.location.href = nw.global.entryUrl;
+      }
+
       var provider = reselect ? null : localStorage.getItem('defaultProvider');
       if (provider === 'erolabs') {
         erolabs();
@@ -160,6 +196,10 @@
         nutakuCom();
       } else if (provider === 'nutakuNet') {
         nutakuNet();
+      } else if (provider === 'dmm') {
+        dmm();
+      } else if (provider === 'fanza') {
+        fanza();
       } else {
         localStorage.removeItem('defaultProvider');
       }
@@ -172,31 +212,64 @@
 
     <button class="icon-button" onclick="erolabs()">
       <i class="icon"><img src="https://www.ero-labs.com/assets/images/logo.webp" /></i>
-      <span class="text">EROLABS (NSFW)</span>
+      <span class="text">EROLABS</span>
+      <span class="type-text">(NSFW)</span>
     </button>
     <button class="icon-button" onclick="johrenSfw()">
       <i class="icon"><img src="https://www.johren.net/images/brand/type/logo.svg" /></i>
-      <span class="text">Johren (SFW)</span>
+      <span class="text">Johren</span>
+      <span class="type-text">(SFW)</span>
     </button>
     <button class="icon-button" onclick="johrenNsfw()">
       <i class="icon"><img src="https://www.johren.games/images/brand/type/logo_adult.svg" /></i>
-      <span class="text">Johren 18+ (NSFW)</span>
+      <span class="text">Johren 18+</span>
+      <span class="type-text">(NSFW)</span>
     </button>
     <button class="icon-button" onclick="nutakuCom()">
-      <i class="icon"
-        ><img
-          class="img-shadow"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Nutaku_logo.svg/768px-Nutaku_logo.svg.png"
-      /></i>
-      <span class="text">nutaku.com (SFW)</span>
+      <i class="icon">
+        <img
+          width="28"
+          height="28"
+          class="img-shadow-nutaku-com align-middle"
+          src="https://www.nutaku.com/images/nutaku-logo-icon.svg"
+        />
+        <img
+          width="80"
+          height="22"
+          class="img-shadow-nutaku-com align-middle"
+          src="https://www.nutaku.com/images/nutaku-logo-text.svg"
+        />
+      </i>
+      <span class="text">nutaku.com</span>
+      <span class="type-text">(SFW)</span>
     </button>
     <button class="icon-button" onclick="nutakuNet()">
-      <i class="icon"
-        ><img
-          class="img-shadow"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Nutaku_logo.svg/768px-Nutaku_logo.svg.png"
-      /></i>
-      <span class="text">nutaku.net (NSFW)</span>
+      <i class="icon">
+        <img
+          width="28"
+          height="28"
+          class="img-shadow-nutaku-net align-middle"
+          src="https://www.nutaku.com/images/nutaku-logo-icon.svg"
+        />
+        <img
+          width="80"
+          height="22"
+          class="img-shadow-nutaku-net align-middle"
+          src="https://www.nutaku.com/images/nutaku-logo-text.svg"
+        />
+      </i>
+      <span class="text">nutaku.net</span>
+      <span class="type-text">(NSFW)</span>
+    </button>
+    <button class="icon-button" onclick="dmm()">
+      <i class="icon"><img class="img-shadow" src="https://p-smith.com/logo/dmm_com.svg" /></i>
+      <span class="text">DMM</span>
+      <span class="type-text">(SFW)</span>
+    </button>
+    <button class="icon-button" onclick="fanza()">
+      <i class="icon"><img src="https://p-smith.com/logo/fanza_r18.svg" /></i>
+      <span class="text">FANZA</span>
+      <span class="type-text">(NSFW)</span>
     </button>
   </body>
 </html>
