Fix language options are still present in single-language only providers in some cases

--- a/app/selector.html
+++ b/app/selector.html
@@ -136,6 +136,7 @@
         nw.global.gameRegex = [/https:\/\/johren-client-en\.g\.cravesaga\.johren\.games/];
         nw.global.cookieHosts = ['www.johren.net', 'johren.net'];
         nw.global.entryUrl = 'https://www.johren.net/games/cravesaga-en/play';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'johrenSfw');
         window.location.href = nw.global.entryUrl;
       }
@@ -148,6 +149,7 @@
         nw.global.gameRegex = [/https:\/\/johren-client-en\.r\.cravesaga\.johren\.games/];
         nw.global.cookieHosts = ['www.johren.games', 'johren.games'];
         nw.global.entryUrl = 'https://www.johren.games/games/cravesagax-en/play';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'johrenNsfw');
         window.location.href = nw.global.entryUrl;
       }
@@ -160,6 +162,7 @@
         nw.global.gameRegex = [/https:\/\/nutaku-client-en\.g\.cravesaga\.johren\.games/];
         nw.global.cookieHosts = ['www.nutaku.com', 'nutaku.com'];
         nw.global.entryUrl = 'https://www.nutaku.com/games/crave-saga/play/';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'nutakuCom');
         window.location.href = nw.global.entryUrl;
       }
@@ -172,6 +175,7 @@
         nw.global.gameRegex = [/https:\/\/nutaku-client-en\.r\.cravesaga\.johren\.games/];
         nw.global.cookieHosts = ['www.nutaku.net', 'nutaku.net'];
         nw.global.entryUrl = 'https://www.nutaku.net/games/crave-saga-x/play/';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'nutakuNet');
         window.location.href = nw.global.entryUrl;
       }
@@ -184,6 +188,7 @@
         nw.global.gameRegex = [/https:\/\/gg-client-w\.crave-saga\.net/];
         nw.global.cookieHosts = ['www.dmm.com', 'dmm.com'];
         nw.global.entryUrl = 'https://pc-play.games.dmm.com/play/cravesaga/';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'dmm');
         window.location.href = nw.global.entryUrl;
       }
@@ -196,6 +201,7 @@
         nw.global.gameRegex = [/https:\/\/gg-client-r\.crave-saga\.net/];
         nw.global.cookieHosts = ['www.dmm.co.jp', 'dmm.co.jp'];
         nw.global.entryUrl = 'https://pc-play.games.dmm.co.jp/play/cravesagax/';
+        nw.global.langs = null;
         localStorage.setItem('defaultProvider', 'fanza');
         window.location.href = nw.global.entryUrl;
       }
