Add traditional chinese support

--- a/app/selector.html
+++ b/app/selector.html
@@ -214,6 +214,11 @@
             regex: /erolabs-client-ch/,
             url: `https://${erolabsUrl}/cn/webGL.html?id=47`,
           },
+          {
+            name: '繁體中文',
+            regex: /erolabs-client-zh/,
+            url: `https://${erolabsUrl}/zh/webGL.html?id=47`,
+          },
         ];
         nw.global.cookieHosts = [erolabsUrl];
         nw.global.entryUrl = `https://${erolabsUrl}/webGL.html?id=47`;
