Some QoL features

--- a/app/selector.html
+++ b/app/selector.html
@@ -156,7 +156,7 @@
         'game.erolabs.net',
       ];
 
-      var erolabsUrl = localStorage.getItem('erolabsUrl') ?? 'ero-labs.com';
+      var erolabsUrl = localStorage.getItem('erolabsUrl') ?? 'www.ero-labs.com';
 
       var menu = new nw.Menu();
       for (const url of erolabUrls) {
